Fixed overflow error, added game over text

--- a/index.css
+++ b/index.css
@@ -32,6 +32,10 @@ body {
   text-decoration: solid underline red;
 }
 
+.game-over {
+  text-align: center;
+}
+
 /* Avatar */
 .avatar-container {
   width: 14vmin;
